--- a/course.html
+++ b/course.html
@@ -64,6 +64,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 ]
             });
         });
+	    
+dataLayer.push({
+  event: "purchase",
+  ecommerce: {
+
+  item_id: "T_12345",
+  item_name : "Java",
+  affiliation: "Google",
+  currency: "USD"}});
 	    </script>
 	
     <title>Course Page</title>
